Table Categoria {
    id int [primary key]
    nombre varchar(255)
    slug varchar(255)
    descripcion text
    created_at datetime
    updated_at datetime
}
Table Producto {
    id int [primary key]
    categoria_id int [ref: > Categoria.id]
    nombre varchar(255)
    codigo varchar(255)
    descripcion_corta text
    descripcion_larga text
    precio_compra float
    precio_venta float
    stock int
    created_at datetime
    updated_at datetime
}
Table Producto_Imagen {
    id int [primary key]
    producto_id int [ref: > Producto.id]
    url varchar(255)
    created_at datetime
    updated_at datetime
}
Table Usuario {
    id int [primary key]
    nombre varchar(255)
    email varchar(255) [unique]
    password varchar(255)
    created_at datetime
    updated_at datetime
}

Table Productos_favoritos{
  id int [primary key]
  usuario_id int [ref: > Usuario.id]
  producto_id int [ref: > Producto.id]
  created_at datetime
  updated_at datetime
}
Table Carritos{
  id int [primary key]
  usuario_id int [ref: > Usuario.id]
  producto_id int [ref: > Producto.id]
  cantidad int
  created_at datetime
  updated_at datetime
}
Table Ordenes{
  id int [primary key]
  usuario_id int [ref: > Usuario.id]
  total float
  divisa varchar(10)
  estado_pago varchar(50)
  estado_orden varchar(50)
  transaccion_id varchar(255)
  direccion_enviar text
  nota text 
  created_at datetime
  updated_at datetime
}
Table detalle_ordenes{
  id int [primary key]
  orden_id int [ref: > Ordenes.id]
  producto_id int [ref: > Producto.id]
  cantidad int
  precio decimal(10,2)
  created_at datetime
  updated_at datetime
}
